@@ -2,7 +2,10 @@ package pieritz.prince.CRMAPP.dto;
 
 import org.springframework.stereotype.Component;
 import pieritz.prince.CRMAPP.domain.Invoice;
+import pieritz.prince.CRMAPP.domain.Product;
 
+import java.math.BigDecimal;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
@@ -13,16 +16,21 @@ public class InvoiceMapper {
     }
 
     public Invoice toInvoice(InvoiceRequest request) {
+        List<Product> produkte = request.getProdukte().stream().map(productMapper::toProduct).toList();
+        double bruttoBetrag = produkte.stream().mapToDouble(Product::getNettopreis).sum();
+
         return Invoice.builder()
-                .kontaktId(request.getKontaktId())
-                .rechnungsdatum(request.getRechnungsdatum())
-                .bruttobetrag(request.getBruttobetrag())
-                .leistungsbezeichnung(request.getLeistungsbezeichnung())
-                .status(request.getStatus())
-                .zahlungsfrist(request.getZahlungsfrist())
-                .produkte(request.getProdukte().stream().map(productMapper::toProduct).collect(Collectors.toList()))
-                .build();
+            .kontaktId(request.getKontaktId())
+            .rechnungsdatum(request.getRechnungsdatum())
+            .bruttobetrag(bruttoBetrag)
+            .leistungsbezeichnung(request.getLeistungsbezeichnung())
+            .status(request.getStatus())
+            .zahlungsfrist(request.getZahlungsfrist())
+            .produkte(produkte)
+            .build();
     }
+
+
 
     public InvoiceResponse toInvoiceResponse(Invoice invoice) {
         return InvoiceResponse.builder()
@@ -33,16 +41,20 @@ public class InvoiceMapper {
                 .leistungsbezeichnung(invoice.getLeistungsbezeichnung())
                 .status(invoice.getStatus())
                 .zahlungsfrist(invoice.getZahlungsfrist())
-                .produkte(invoice.getProdukte().stream().map(productMapper::toProductResponse).collect(Collectors.toList()))
+                .produkte(invoice.getProdukte().stream().map(productMapper::toProductResponse).toList())
                 .build();
     }
 
     public void updateInvoiceFromRequest(InvoiceRequest request, Invoice invoice) {
+        List<Product> produkte = request.getProdukte().stream().map(productMapper::toProduct).toList();
+        double bruttoBetrag = produkte.stream().mapToDouble(Product::getNettopreis).sum();
+
         invoice.setKontaktId(request.getKontaktId());
         invoice.setRechnungsdatum(request.getRechnungsdatum());
-        invoice.setBruttobetrag(request.getBruttobetrag());
+        invoice.setBruttobetrag(bruttoBetrag);
         invoice.setLeistungsbezeichnung(request.getLeistungsbezeichnung());
         invoice.setStatus(request.getStatus());
         invoice.setZahlungsfrist(request.getZahlungsfrist());
+        invoice.setProdukte(request.getProdukte().stream().map(productMapper::toProduct).toList());
     }
 }
